syntax = "proto3";

package example;

option go_package = "reamde.dev/monolith/proto/example;example";

message PingRequest {
  string nonce = 1;
}

message PingResponse {
  string nonce = 1;
}

service PingService {
  rpc Ping(PingRequest) returns (PingResponse);
}